--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,45 @@
 repos:
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+        name: isort imports smac
+        files: smac
+
+      - id: isort
+        name: isort imports tests
+        files: tests
+
+  - repo: https://github.com/ambv/black
+    rev: 22.1.0
+    hooks:
+      - id: black
+        name: black formatter smac
+        files: smac
+
+      - id: black
+        name: black formatter tests
+        files: tests
+
+      - id: black
+        name: black formatter examples
+        files: examples
+
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.761
+    rev: v0.930
     hooks:
       - id: mypy
-        args: [--show-error-codes, --ignore-missing-imports, --disallow-untyped-decorators, --disallow-incomplete-defs, --disallow-untyped-defs, --follow-imports, skip]
-        name: mypy SMAC
-        files: smac/.*
+        name: mypy smac
+        files: smac
 
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
+    rev: 4.0.1
     hooks:
       - id: flake8
-        name: flake8 SMAC
+        name: flake8 smac
         files: smac
+
       - id: flake8
-        name: flake8 test
-        files: test
-      - id: flake8
-        name: flake8 examples
-        files: examples
+        name: flake8 tests
+        files: tests
