--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -138,5 +138,7 @@ jobs:
       if: matrix.code-cov && always()
       uses: codecov/codecov-action@v2
       with:
+        # token: ${{secrets.CODECOV_TOKEN}}
+        version: "v0.1.15"
         fail_ci_if_error: true
         verbose: true
