--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -44,8 +44,9 @@ jobs:
       run: |
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
-        cd examples/commandline
-        bash spear_qcp_roar.sh
+
+        # cd examples/commandline
+        bash examples/commandline/spear_qcp_roar.sh
 
     - name: Spear-QCP SMAC (Commandline)
       timeout-minutes: 20
@@ -53,8 +54,8 @@ jobs:
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
 
-        cd examples/commandline
-        bash spear_qcp_smac.sh
+        # cd examples/commandline
+        bash examples/commandline/spear_qcp_smac.sh
 
     - name:  Branin (Commandline)
       timeout-minutes: 20
@@ -62,5 +63,5 @@ jobs:
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
 
-        cd examples/commandline
-        python ../../scripts/smac.py --scenario branin/scenario.txt
+        # cd examples/commandline
+        python ./scripts/smac.py --scenario examples/commandline/branin/scenario.txt
