--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -7,13 +7,13 @@ on:
   # Trigger on push to these branches
   push:
     branches:
-      - master
+      - main
       - development
 
   # Trigger on a open/push to a PR targeting one of these branches
   pull_request:
     branches:
-      - master
+      - main
       - development
 
 jobs:
