--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,8 @@
 # If you see me, please update my `rev` field using the provided links
 # Click the repo and update to latest tags.
 # If things break on update, raise an issue
+
+
 repos:
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
@@ -16,21 +18,19 @@ repos:
         name: black formatter smac
         files: smac
 
-      - id: black
-        name: black formatter examples
-        files: examples
-
   - repo: https://github.com/pycqa/pydocstyle
     rev: 6.1.1
     hooks:
       - id: pydocstyle
+        exclude: "^tests/"
         files: smac
         additional_dependencies: ["toml"]  # Needed to parse pyproject.toml
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.930
+    rev: v0.942
     hooks:
       - id: mypy
+        exclude: "^(scripts/|tests/)"
         name: mypy smac
         files: smac
 
