--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
     rev: 5.10.1
     hooks:
       - id: isort
+        exclude: "^(scripts/|tests/)"
         name: isort imports smac
         files: smac
 
@@ -15,6 +16,7 @@ repos:
     rev: 22.3.0
     hooks:
       - id: black
+        exclude: "^(scripts/|tests/)"
         name: black formatter smac
         files: smac
 
@@ -22,7 +24,7 @@ repos:
     rev: 6.1.1
     hooks:
       - id: pydocstyle
-        exclude: "^tests/"
+        exclude: "^(scripts/|tests/)"
         files: smac
         additional_dependencies: ["toml"]  # Needed to parse pyproject.toml
 
@@ -30,7 +32,7 @@ repos:
     rev: v0.942
     hooks:
       - id: mypy
-        exclude: "^(scripts/|tests/)"
+        exclude: "^(scripts/|tests/|smac/utils/dependencies.py)"
         name: mypy smac
         files: smac
 
@@ -38,6 +40,7 @@ repos:
     rev: 4.0.1
     hooks:
       - id: flake8
+        exclude: "^(scripts/|tests/)"
         name: flake8 smac
         files: smac
 
