Try to fix more stuff

--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -1,4 +1,4 @@
-name: dist-check
+name: dist
 
 on:
   # Manual trigger option in github
@@ -34,18 +34,21 @@ jobs:
         python setup.py sdist
 
     - name: Twine check
+      id: twine_check
       run: |
         pip install twine
         last_dist=$(ls -t dist/smac-*.tar.gz | head -n 1)
         twine_output=`twine check "$last_dist"`
-        if [[ "$twine_output" != "Checking $last_dist: PASSED" ]]; then echo $twine_output;fi
+        if [[ "$twine_output" != "Checking $last_dist: PASSED" ]]; then echo $twine_output && exit 1;fi
 
     - name: Install dist
+      if: steps.twine_check.conclusion == 'success'
       run: |
         last_dist=$(ls -t dist/smac-*.tar.gz | head -n 1)
         pip install $last_dist
 
     - name: PEP 561 Compliance
+      if: steps.twine_check.conclusion == 'success'
       run: |
         pip install mypy
 
