Updated stale options again

--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -7,16 +7,12 @@ daysUntilClose: 7
 # Issues with these labels will never be considered stale
 exemptLabels:
   - bug
-  - dependencies
+  - dependency
   - documentation
   - enhancement
   - feature request
-
-# Only issues/PRs with ANY of these labels are checked
-any-of-labels:
-  - discussion
-  - duplicate
-  - question
+  - test
+  - example
 
 # Label to use when marking an issue as stale
 staleLabel: stale
