--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -6,11 +6,16 @@ daysUntilClose: 7
 
 # Issues with these labels will never be considered stale
 exemptLabels:
-  - pinned
-  - security
+  - bug
+  - dependency
+  - documentation
+  - enhancement
+  - feature
+  - test
+  - example
 
 # Label to use when marking an issue as stale
-staleLabel: wontfix
+staleLabel: stale
 
 # Comment to post when marking an issue as stale. Set to `false` to disable
 markComment: >
