--- a/.github/workflows/pre-commit-update.yml
+++ b/.github/workflows/pre-commit-update.yml
@@ -1,9 +1,9 @@
 name: Pre-commit auto-update
 
 on:
-  # every day at midnight
+  # every Monday at 1pm utc
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 13 * * 1"
   # on demand
   workflow_dispatch:
 
@@ -24,3 +24,7 @@ jobs:
           title: Update pre-commit hooks
           commit-message: "chore: update pre-commit hooks"
           body: Update versions of pre-commit hooks to latest version.
+          
+      - name: Run updated pre-commit
+        run: |
+            pre-commit run --all-files
