--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,12 +9,14 @@ on:
     branches:
       - main
       - development
+      - development-2.0
 
   # Triggers with push to a pr aimed at main
   pull_request:
     branches:
       - main
       - development
+      - development-2.0
 
   schedule:
     # Every day at 7AM UTC
