--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -45,7 +45,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9"]
+        python-version: ["3.10"]
         os: ["ubuntu-latest"]
 
     steps:
@@ -98,7 +98,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        # python-version: ["3.8", "3.9", "3.10"]
+        # only test one version right now
+        python-version: ["3.8"]
         os: ["ubuntu-latest"]
 
     steps:
