--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -136,7 +136,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        # python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8"]
         os: ["ubuntu-latest"]
 
     steps:
